--- a/Teste da lampada/index.html
+++ b/Teste da lampada/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste da Lampada</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -16,7 +16,8 @@
 
     <img id="lampada" src="./Lampada-apagada.jpg" alt="Lâmpada">
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 
 </html>
